--- a/src/Footer.css
+++ b/src/Footer.css
@@ -181,11 +181,11 @@
   }
 
   .footer-item {
-    color: #A0A0A0;
+    color: black;
   }
 
   .footer-bottom p {
-    color: #888;
+    color: black;
   }
 
   .footer-bottom {
